# incinerator

./: .gitignore  Makefile  Makefile.txt  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  mypy.yaml  pytest.yaml  ruff.yaml
docs/: README.md  localize.md  utils.md
docs/tutorials/: incinerator_tutorial.ipynb  incinerator_tutorial.md  kplr006922244-2009166043257_lpd-targ.fits
site/: 404.html  index.html  objects.inv  search.json  sitemap.xml
site/localize/: index.html
site/tutorials/incinerator_tutorial/: index.html
site/utils/: index.html
src/incinerator/: __init__.py  localize.py  utils.py
tests/: test_localize.py
