[project]
name = "incinerator"
version = "0.1.0"
description = "A pixel-level exoplanet transit vetting technique!"
readme = "README.md"
authors = [
    { name = "Julie Moquin", email = "julie.moquin@nasa.gov" }, 
    { name = "Robert F. Wilson", email = "robert.f.wilson@nasa.gov" },
    { name = "Jorge Martínez-Palomera", email = "jorge.i.martinezpalomera@nasa.gov" },
    { name = "Christina Hedges", email = "christina.l.hedges@nasa.gov" }
]
license = "MIT"


requires-python = ">=3.12,<4.0"
dependencies = [
    "astropy>=7.1.0,<8.0.0",
    "astroquery>=0.4.11",
    "lamatrix>=1.0.1",
    "lkprf>=1.1.1",
    "lmfit>=1.3.4",
    "matplotlib>=3.10.8,<4.0.0",
    "numpy>=1.26.4,<2.0.0",
]

[project.scripts]
incinerator = "incinerator:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
